# chatsh

./: .gitignore  CLAUDE.md  README.md  SELF_TEST.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
coverage/: index.html  lcov.info
coverage/lcov-report/: index.html
coverage/src/: App.tsx.html  SettingsContext.tsx.html  ThemeContext.tsx.html  constants.ts.html  index.html  settings.ts.html  storage.ts.html  templates.ts.html  theme.ts.html  types.ts.html  ui.ts.html
docs/: .test-cases.md.swp  roadmap.md  test-cases.md  test-review-T022-T023.md
e2e/: README.md  tsconfig.json  wdio.conf.ts
e2e/specs/: t022-paste.spec.ts  t023-resize.spec.ts
scripts/: test-daemon.sh
src/: App.tsx  SettingsContext.tsx  ThemeContext.tsx  constants.ts  fs.ts  index.css  main.tsx  migrate.ts  settings.ts  settingsStore.ts  storage.ts  templates.ts  theme.ts  types.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  protocol.rs  pty.rs
src/__tests__/: migrate.test.ts  panesStore.test.ts  t019-zoom-cols.test.ts  t020-image-paste.test.ts  t021-settings-persist.test.ts  templates.test.ts  theme.test.ts  ui.test.ts
src/components/: AddAgentModal.tsx  AddPaneModal.tsx  AddSessionModal.tsx  Avatar.tsx  ClaudeMdEditor.tsx  CommandPalette.tsx  EditPaneModal.tsx  SettingsPanel.tsx  ShellPane.tsx  Sidebar.tsx  SingleShell.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx
src/hooks/: useKeyboardShortcuts.ts  usePasteImageOverlay.ts
(+60 files in other folders)
