[package]
default-run = "chatsh"
name = "chatsh"
version = "0.1.9"
edition = "2021"

[lib]
name = "chatsh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chatsh-daemon"
path = "src/bin/daemon.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2.3.3"
libc = "0.2"
